--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -221,7 +221,7 @@ hr {
     padding: 50px;
 
     a {
-      color: $acc-dark;
+      color: $text-dark;
       font-size: 16px;
 
       &:hover {
