--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,15 +2,12 @@
 
   <div class="spot-types">
     <div class="tag-line">
-      <div class="side arrow">
-      </div>
+      <img class="arrow-side" src="../images/arrow-left.png">
       <div class="center">
-        <h1>Three Types of Spots</h1>
-        <div class="center arrow">
-        </div>
+        <h2>Three Types of <span class="emphasize">Spots</span></h2>
+        <img class="arrow-center" src="../images/arrow-center.png">
       </div>
-      <div class="side arrow">
-      </div>
+      <img class="arrow-side" src="../images/arrow-right.png">
     </div>
     <div class="spots">
       <div class="spot food" ng-click="findListings()">
