--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,26 +11,33 @@
     </div>
     <div class="spots">
       <div class="spot food" ng-click="findListings()">
-        <div class="type-icon">
+        <img class="b4cm-icon" src="../images/b4cm-icon-food.png">
+        <h3>Food</h3>
+        <div class="type-blurb">
+          <h4>"Get a table</h4>
+          <h4>and a good meal"</h4>
         </div>
-        <h2>Food</h2>
-        <h4>Get a table<br>and a good meal</h4>
       </div>
       <div class="spot study" ng-click="findListings()">
-        <div class="type-icon">
+        <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
+        <h3>Study</h3>
+        <div class="type-blurb">
+          <h4>"Study or work</h4>
+          <h4>without distractions"</h4>
         </div>
-        <h2>Study</h2>
-        <h4>Study or work<br>without distractions</h4>
       </div>
       <div class="spot social" ng-click="findListings()">
-        <div class="type-icon">
+        <img class="b4cm-icon" src="../images/b4cm-icon-social.png">
+        <h3>Social</h3>
+        <div class="type-blurb">
+          <h4>"Have a drink,</h4>
+          <h4>and hear your friends"</h4>
         </div>
-        <h2>Social</h2>
-        <h4>Have a drink<br>and hear your friends</h4>
       </div>
     </div>
-    <hr>
   </div>
+
+  <hr>
 
   <div class="nearby">
     <form class="form-horizontal">
