Adjust background and margins for nearby on main page.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -301,6 +301,10 @@ hr {
       display: inline;
     }
 
+    form {
+      margin: 0;
+    }
+
     select {
       margin: -10px 0 0 10px;
       width: 80px;
