Add cursor to on hover for spot types.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -250,6 +250,10 @@ hr {
 
     .spots {
       padding: 0 0 0 10px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     .arrow-side {
