--- a/app/views/main.html
+++ b/app/views/main.html
@@ -44,7 +44,7 @@
       <h3>Find a place near you:</h3>
       <select class="type">
         <option>Food</option>
-        <option>Study</option>
+        <option selected>Study</option>
         <option>Social</option>
         <option>All</option>
       </select>
