--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -57,6 +57,13 @@ hr {
   width: 930px;
 }
 
+button {
+  background-color: $comp1-dark !important;
+  background-image: linear-gradient(to bottom, $comp1-light, $comp1-dark) !important;
+  color: $high-bright !important;
+  margin: -10px 0 0 10px;
+}
+
 .emphasize {
   color: $comp2-dark;
 }
@@ -325,13 +332,6 @@ hr {
       margin: -10px 0 0 10px;
       text-align: center;
       //width: 150px;
-    }
-
-    button {
-      background-color: $comp1-dark;
-      background-image: linear-gradient(to bottom, $comp1-light, $comp1-dark);
-      color: $high-bright;
-      margin: -10px 0 0 10px;
     }
   }
 
