--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div id="main-page">
 
   <div class="spot-types">
-    <div class="tag-line">
+    <div class="spots-tagline">
       <img class="arrow-side" src="../images/arrow-left.png">
       <div class="center">
         <h2>Three Types of <span class="emphasize">Spots</span></h2>
@@ -56,9 +56,12 @@
   <hr>
 
   <div class="visualize">
-    <h1>"Visualize the herd and learn<br>the best times to go to your favorite place.</h1>
+    <div class="visualize-tagline">
+      <h2><span class="emphasize">"Visualize</span> the herd and learn the best</h2>
+      <h2>times to go to your favorite place."</h2>
+    <div>
     <div class="crowd-factor">
-      <h2>Crowd Factor: <span class="current-time">Tuesday, 5pm</span></h2>
+      <h3>Crowd Factor: <span class="current-time">Tuesday, 5pm</span></h3>
       <h4>73 Watchers</h4>
       <button type="button" class="btn">Add Herd Watch</button>
       <div class="crowd-visuals">
