Add link home to header logo and title.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -194,6 +194,10 @@ button {
     margin: -10px 0 4px 0;
   }
 
+  a {
+    text-decoration: none;
+  }
+
   .tag-line {
     float: right;
     padding: 15px 485px 0 0;
