--- a/app/views/main.html
+++ b/app/views/main.html
@@ -59,7 +59,8 @@
     <div class="visualize-tagline">
       <h2><span class="emphasize">"Visualize</span> the herd and learn the best</h2>
       <h2>times to go to your favorite place."</h2>
-    <div>
+    </div>
+
     <div class="crowd-factor">
       <h3>Crowd Factor: <span class="current-time">Tuesday, 5pm</span></h3>
       <h4>73 Watchers</h4>
@@ -299,17 +300,17 @@
         <div class="labels">
           <div class="row1">
             <div class="empty">
-              <div class="color">
+              <div class="empty-square color">
               </div>
               <h5>Almost Empty</h5>
             </div>
             <div class="average">
-              <div class="color">
+              <div class="ave-square color">
               </div>
               <h5>Average Traffic</h5>
             </div>
             <div class="herd">
-              <div class="color">
+              <div class="herd-square color">
               </div>
               <h5>Herd Alert</h5>
             </div>
@@ -317,17 +318,17 @@
           <br>
           <div class="row2">
             <div class="few">
-              <div class="color">
+              <div class="few-square color">
               </div>
               <h5>A Few People</h5>
             </div>
             <div class="crowded">
-              <div class="color">
+              <div class="crowded-square color">
               </div>
               <h5>Crowded</h5>
             </div>
             <div class="closed">
-              <div class="color">
+              <div class="closed-square color">
               </div>
               <h5>Closed</h5>
             </div>
