--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -512,8 +512,13 @@ button {
 *** Crowd Factor 
 *******************/
 .crowd-factor {
-
+  background-image: linear-gradient(to bottom, #bbb, #aaa);
+  border: 2px solid #6E6E6E;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+  margin: 20px auto;
   text-align: center;
+  width: 80%;
 
   h3, h4 {
     display: inline-block;
@@ -581,6 +586,8 @@ button {
       display: inline-block;
       height: 15px;
       width: 15px;
+      border: .5px solid black;
+      border-radius: 5px;
     }
 
     .row2 {
