Fix issue with padding in footer not good for chrome or safari.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -58,7 +58,7 @@
   <div class="visualize">
     <div class="visualize-tagline">
       <h2><span class="emphasize">"Visualize</span> the herd and learn the best</h2>
-      <h2>times to go to your favorite place."</h2>
+      <h2>times to go to your favorite places."</h2>
     </div>
 
     <div class="crowd-factor">
