--- a/app/views/main.html
+++ b/app/views/main.html
@@ -68,7 +68,7 @@
       <div class="crowd-visuals">
         <div class="timeslot">
           <h5>Morning</h5>
-          <table>
+          <table class="morning-table">
             <tr>
               <th></th>
               <th>5</th>
@@ -78,74 +78,74 @@
               <th>9</th>
               <th>10</th>
             </tr>
-            <tr>
+            <tr class="monday-row">
               <td>M</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="ave-square"></td>
+              <td class="ave-square"></td>
             </tr>
-            <tr>
+            <tr class="tuesday-row">
               <td>Tu</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="ave-square"></td>
+              <td class="ave-square"></td>
             </tr>
-            <tr>
+            <tr class="wednesday-row">
               <td>W</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
             </tr>
-            <tr>
+            <tr class="thursday-row">
               <td>Th</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="ave-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
             </tr>
-            <tr>
+            <tr class="friday-row">
               <td>F</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
             </tr>
-            <tr>
+            <tr class="saturday-row">
               <td>Sa</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="empty-square"></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
             </tr>
-            <tr>
+            <tr class="sunday-row">
               <td>Su</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
             </tr>
           </table>
         </div>
         <div class="timeslot">
           <h5>Afternoon</h5>
-          <table>
+          <table class="afternoon-table">
             <tr>
               <th></th>
               <th>11</th>
@@ -155,74 +155,74 @@
               <th>3</th>
               <th>4</th>
             </tr>
-            <tr>
+            <tr class="monday-row">
               <td>M</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
             </tr>
-            <tr>
+            <tr class="tuesday-row">
               <td>Tu</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
             </tr>
-            <tr>
+            <tr class="wednesday-row">
               <td>W</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
             </tr>
-            <tr>
+            <tr class="thursday-row">
               <td>Th</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
             </tr>
-            <tr>
+            <tr class="friday-row">
               <td>F</td>
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
             </tr>
-            <tr>
+            <tr class="saturday-row">
               <td>Sa</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
             </tr>
-            <tr>
+            <tr class="sunday-row">
               <td>Su</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
             </tr>
           </table>
         </div>
         <div class="timeslot">
           <h5>Evening</h5>
-          <table>
+          <table class="evening-table">
             <tr>
               <th></th>
               <th>5</th>
@@ -232,68 +232,68 @@
               <th>9</th>
               <th>10</th>
             </tr>
-            <tr>
+            <tr class="monday-row">
               <td>M</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
             </tr>
-            <tr>
+            <tr class="tuesday-row">
               <td>Tu</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
             </tr>
-            <tr>
+            <tr class="wednesday-row">
               <td>W</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
             </tr>
-            <tr>
+            <tr class="thursday-row">
               <td>Th</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
             </tr>
-            <tr>
+            <tr class="friday-row">
               <td>F</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
             </tr>
-            <tr>
+            <tr class="saturday-row">
               <td>Sa</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="crowded-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
             </tr>
-            <tr>
+            <tr class="sunday-row">
               <td>Su</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
             </tr>
           </table>
         </div>
