--- a/app/views/main.html
+++ b/app/views/main.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="crowd-factor">
-      <h3>Crowd Factor: <span class="current-time">Tuesday, 5pm</span></h3>
+      <h3>Crowd Factor: <span class="current-time empty">Tuesday, 11pm</span></h3>
       <h4>73 Watchers</h4>
       <button type="button" class="btn">Add Herd Watch</button>
       <div class="crowd-visuals">
@@ -166,7 +166,7 @@
             </tr>
             <tr class="tuesday-row">
               <td>Tu</td>
-              <td class="empty-square"></td>
+              <td class="empty-square"><img class="marker" src="../images/star-icon.png"></td>
               <td class="few-square"></td>
               <td class="crowded-square"></td>
               <td class="herd-square"></td>
