Fix colors in crowd factor.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -193,9 +193,9 @@
             </tr>
             <tr class="friday-row">
               <td>F</td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="crowded-square"></td>
               <td class="herd-square"></td>
               <td class="herd-square"></td>
               <td class="crowded-square"></td>
