--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -1,8 +1,7 @@
 <div id="listings-page">
   <div class="title-bar clearfix">
     <div class="main-col span8">
-      <div class="type-icon">
-      </div>
+      <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
       <h2>Study</h2>
       <h3>Palo Alto, CA 94301</h3>
       <form class="form-horizontal">
@@ -27,108 +26,112 @@
       </div>
     </div>
   </div>
+
   <hr>
-  <div class="listings span8">
 
-    <div class="listing" ng-click="findSpot()">
-      <div class="rank">
-        <h4>1.</h4>
-      </div>
-      <div class="info"> 
-        <h4 class="title">Philz Coffee</h4>
-        <h5 class="address">101 Forest Ave. Palo Alto</h5>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon-half.png">
-            <img src="images/star-icon-empty.png">
-          </div>
-          <div class="review-count">75 Reviews</div>
+  <div class="page">
+    <div class="listings">
+
+      <div class="listing" ng-click="findSpot()">
+        <div class="rank">
+          <h4>1.</h4>
         </div>
-        <div class="crowd-rank">
-          <div class="crowd-bar">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+        <div class="info"> 
+          <h4 class="title">Philz Coffee</h4>
+          <h5 class="address">101 Forest Ave. Palo Alto</h5>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon-half.png">
+              <img src="images/star-icon-empty.png">
+            </div>
+            <div class="review-count">75 Reviews</div>
           </div>
-          <div class="watchers">549 Watchers</div>
+          <div class="crowd-rank">
+            <div class="crowd-bar">
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+            </div>
+            <div class="watchers">549 Watchers</div>
+          </div>
         </div>
+        <hr>
       </div>
-      <hr>
+
+      <div class="listing" ng-click="findSpot()">
+        <div class="rank">
+          <h4>2.</h4>
+        </div>
+        <div class="info"> 
+          <h4 class="title">Peet's Coffee & Tea</h4>
+          <h5 class="address">448 University Ave. Palo Alto</h5>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon-empty.png">
+              <img src="images/star-icon-empty.png">
+            </div>
+            <div class="review-count">75 Reviews</div>
+          </div>
+          <div class="crowd-rank">
+            <div class="crowd-bar">
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+            </div>
+            <div class="watchers">549 Watchers</div>
+          </div>
+        </div>
+        <hr>
+      </div>
+
+      <div class="listing" ng-click="findSpot()">
+        <div class="rank">
+          <h4>3.</h4>
+        </div>
+        <div class="info"> 
+          <h4 class="title">Coupa Cafe</h4>
+          <h5 class="address">638 Ramona St. Palo Alto</h5>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon-half.png">
+              <img src="images/star-icon-empty.png">
+            </div>
+            <div class="review-count">75 Reviews</div>
+          </div>
+          <div class="crowd-rank">
+            <div class="crowd-bar">
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+            </div>
+            <div class="watchers">549 Watchers</div>
+          </div>
+        </div>
+        <hr>
+      </div>
+
+      <div class="more">
+        <a>More Results</a>
+      </div>
     </div>
 
-    <div class="listing" ng-click="findSpot()">
-      <div class="rank">
-        <h4>2.</h4>
-      </div>
-      <div class="info"> 
-        <h4 class="title">Peet's Coffee & Tea</h4>
-        <h5 class="address">448 University Ave. Palo Alto</h5>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon-empty.png">
-            <img src="images/star-icon-empty.png">
-          </div>
-          <div class="review-count">75 Reviews</div>
-        </div>
-        <div class="crowd-rank">
-          <div class="crowd-bar">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-          </div>
-          <div class="watchers">549 Watchers</div>
-        </div>
-      </div>
-      <hr>
+    <div class="side-col">
+      <div class="map">MAP</div>
     </div>
-
-    <div class="listing" ng-click="findSpot()">
-      <div class="rank">
-        <h4>3.</h4>
-      </div>
-      <div class="info"> 
-        <h4 class="title">Coupa Cafe</h4>
-        <h5 class="address">638 Ramona St. Palo Alto</h5>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon-half.png">
-            <img src="images/star-icon-empty.png">
-          </div>
-          <div class="review-count">75 Reviews</div>
-        </div>
-        <div class="crowd-rank">
-          <div class="crowd-bar">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-          </div>
-          <div class="watchers">549 Watchers</div>
-        </div>
-      </div>
-      <hr>
-    </div>
-
-    <div class="more">
-      <a>More Results</a>
-    </div>
-  </div>
-
-  <div class="side-col span4">
-    <div class="map">MAP</div>
   </div>
 </div>
