--- a/app/views/main.html
+++ b/app/views/main.html
@@ -40,7 +40,7 @@
   <hr>
 
   <div class="nearby">
-    <form class="form-horizontal">
+    <form class="form-horizontal find-spot">
       <h3>Find a place near you:</h3>
       <select class="type">
         <option>Food</option>
