--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -4,7 +4,7 @@
       <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
       <h2>Study</h2>
       <h3>Palo Alto, CA 94301</h3>
-      <form class="form-horizontal">
+      <form class="form-horizontal find-spot">
         <h4>New Spot: </h4>
         <select class="type">
           <option>Food</option>
@@ -30,6 +30,7 @@
   <hr>
 
   <div class="page">
+
     <div class="listings">
 
       <div class="listing" ng-click="findSpot()">
